# mtost

./: .gitignore  .ocamlformat  README.md  TODO.md  ast.ml  compile.ml  compilem1.ml  dune  dune-project  grammar.txt  lexer.mll  llvm.ml  main.tost  mtost.ml  mtost.opam  parser.mly  path.ml  range.ml  range.mli  std.c  transform.ml  util.ml
mid1/: mid1.ml
programs/: echo.tost  fac.tost  std.tost
tree-sitter-tost/: README.md  grammar.js  install-nvim.sh  package.json
tree-sitter-tost/examples/: echo.tost  escape.tost
tree-sitter-tost/queries/: highlights.scm
tree-sitter-tost/src/: grammar.json  node-types.json  parser.c
