(lang dune 3.10)

(name mtost)

(generate_opam_files true)
(using menhir 2.1)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

; (package
;  (name mtost)
;  (synopsis "tost compiler")
;  (description "(mega) silly tost compiler")
;  (depends ocaml dune)
;  (tags
;   (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
